--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-Hello, world!
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    </head>
+    <body>
+        Hello, world!
+        <a href="https://foursquare.com/oauth2/authenticate?client_id=GQFKS3DGYZAAJYE51POOHIPXOY22F5P0TD1OBFD1POXTIZOV&response_type=token&redirect_uri=http://localhost.alanmooiman.com:8000/authenticated/index.html">Log in</a>
+    <body>
 </html>
