Fix login redirect to work with server

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
 		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     </head>
     <body>
-        Hello, world!
-        <a href="https://foursquare.com/oauth2/authenticate?client_id=GQFKS3DGYZAAJYE51POOHIPXOY22F5P0TD1OBFD1POXTIZOV&response_type=token&redirect_uri=http://localhost.alanmooiman.com:8000/authenticated/index.html">Log in</a>
+        <a href="https://foursquare.com/oauth2/authenticate?client_id=GQFKS3DGYZAAJYE51POOHIPXOY22F5P0TD1OBFD1POXTIZOV&response_type=token&redirect_uri=http://fourstory.alanmooiman.com/authenticated">Log in with foursquare</a>
     <body>
 </html>
