--- a/src/authenticated/index.html
+++ b/src/authenticated/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
         <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-        <script type="text/javascript" src="/js/localforge.min.js"></script>
+        <script type="text/javascript" src="/vendor/localforage.min.js"></script>
         <script src="/js/mapController.js"></script>
         <script src="/js/fourSquareAPIController.js"></script>
         <script src="/js/checkin.js"></script>
